--- a/src/dignisi/style.css
+++ b/src/dignisi/style.css
@@ -22,7 +22,7 @@
   left: 9%;
   top: 50%;
   transform: translateY(-50%);
-  font-size: clamp(150px, 35vw, 45vw);
+  font-size: clamp(10rem, 35vw, 35rem);
   font-weight: 300;
   font-family: serif;
   color: var(--text_color_dark_gold);
@@ -33,8 +33,8 @@
 
 /* Заголовок */
 .hero-title {
-  font-size: clamp(2rem, 3vw, 3.5rem);
-  letter-spacing: 0.6rem;
+  font-size: 3.5rem;
+  letter-spacing: 0.36em;
   color: var(--text_color_gold);
   font-weight: 300;
 }
@@ -48,8 +48,8 @@
 
 .hero-subtitle {
   font-family: "Inter", sans-serif;
-  font-size: clamp(0.8rem, 1.1vw, 1rem);
-  letter-spacing: 0.1rem;
+  font-size: 1rem;
+  letter-spacing: 0.1em;
   color: var(--text_color_gold);
   font-weight: 200;
 }
@@ -65,7 +65,8 @@
 }
 
 .block-logo img {
-  width: clamp(100px, 7vw, 8vw);
+  width: 8rem;
+  max-width: 140px;
   height: auto;
 }
 
@@ -89,12 +90,12 @@
   font-family: "Playfair Display", serif;
   display: block;
   &:first-child {
-    font-size: clamp(2rem, 3vw, 3.5rem);
-    letter-spacing: 0.1rem;
+    font-size: 3.5rem;
+    letter-spacing: 0.1em;
   }
   &:last-child {
-    font-size: clamp(2rem, 3vw, 3.5rem);
-    letter-spacing: 0.1rem;
+    font-size: 3.5rem;
+    letter-spacing: 0.1em;
     color: var(--text_color_gold);
   }
 }
@@ -110,8 +111,9 @@
   position: absolute;
   bottom: 0;
   right: 4%;
-  height: 100dvh;
-  max-height: 80%;
+  height: auto;
+  max-height: 85dvh;
+
   z-index: 1;
 }
 
@@ -130,7 +132,7 @@
   flex: 1;
   text-align: justify;
   font-family: "Inter", sans-serif;
-  font-size: clamp(0.8rem, 1.1vw, 1rem);
+  font-size: 1rem;
 
   font-weight: 200;
 }
@@ -173,11 +175,11 @@
   width: 25%;
   text-align: justify;
   font-family: "Inter", sans-serif;
-  font-size: clamp(0.8rem, 1.1vw, 1rem);
+  font-size: 1rem;
 }
 
 .history-title {
-  font-size: clamp(2rem, 3vw, 3.5rem);
+  font-size: 3.5rem;
   text-align: center;
   color: var(--text_color_gold);
 }
@@ -215,7 +217,6 @@
 
 .partners-map__logos {
   img {
-    width: clamp(100px, 7vw, 8vw);
     border: 1px solid #000;
     transition: transform 0.3s ease;
 
@@ -317,14 +318,14 @@
 
 .left-block,
 .right-block {
-  width: clamp(20rem, 32vw, 27rem);
+  width: 27rem;
 }
 .left-block__text {
   text-align: justify;
   flex: 1;
   text-align: justify;
   font-family: "Inter", sans-serif;
-  font-size: clamp(0.8rem, 1.1vw, 1rem);
+  font-size: 1rem;
 
   font-weight: lighter;
 }
@@ -337,7 +338,7 @@
   font-weight: 200;
   line-height: 1;
   padding: 2rem 0;
-  letter-spacing: 1rem;
+  letter-spacing: 0.2em;
   filter: drop-shadow(2px 5px 50px var(--text_color_gold));
 }
 
@@ -376,7 +377,9 @@
   position: absolute;
   bottom: 0;
   overflow: hidden;
-  height: 60%;
+height: auto;
+max-height: 60dvh;
+
 }
 .podcast-image img {
   width: 100%;
@@ -386,3 +389,4 @@
 /* ===========================================
    PODCAST BLOCK END
 =========================================== */
+
